test/TestPhases/parser/invalid/externInStruct.blc
struct S
    extern var s: float32
end

@[EntryPoint]
activity A ()
    var s: S
    await true
end